# egltri

./: .gitignore  CMakeLists.txt  Makefile  build.sh  egltri.c  es2tri.c
